package at.fhj.msd.swdesign.observer.example;

public interface SensorListener {

    void sensorDataChanged();
}
